# drawsimplifier

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  simplify_dxf.py  simplify_svg.py
src/drawsimplifier/: __init__.py  app.py  converter.py  simplify_dxf.py  simplify_svg.py
